Add new featurea

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Hello, 
         <br>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, eos!</p>
+        <p>Ek naya feature add karna tha to soch button lga de</p>
+        <button>Know More</button>
 </body>
 </html>
